--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html lang="en">
 
 <head>
-  <meta property="og:title" content="My Portfolio" />
-  <meta property="og:description" content="Aiman's professional web portfolio" />
-  <meta property="og:image" content="https://kim-profile.netlify.app/preview.png" />
-  <meta property="og:url" content="https://kim-profile.netlify.app"/>
-  <meta property="og:type" content="website" />
+  <!-- Primary Meta Tags -->
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/images/fav.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aiman &mdash;&mdash; Portfolio</title>
+  <title>Aiman — Portfolio</title>
+  <meta name="description"
+    content="Aiman's professional portfolio — Frontend Developer passionate about building creative, fast, and user-friendly web apps." />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/images/fav.png" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kim-profile.netlify.app" />
+  <meta property="og:title" content="Aiman — Frontend Developer" />
+  <meta property="og:description"
+    content="Aiman's professional portfolio — Frontend Developer passionate about building creative, fast, and user-friendly web apps." />
+  <meta property="og:image" content="https://kim-profile.netlify.app/preview.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://kim-profile.netlify.app" />
+  <meta name="twitter:title" content="Aiman — Frontend Developer" />
+  <meta name="twitter:description"
+    content="Aiman's professional portfolio — Frontend Developer passionate about building creative, fast, and user-friendly web apps." />
+  <meta name="twitter:image" content="https://kim-profile.netlify.app/preview.png" />
 </head>
 
 <body>
